filter of all vouchers types added

--- a/VoucherManagementSystem/Views/Reports/CustomerLedger.cshtml
+++ b/VoucherManagementSystem/Views/Reports/CustomerLedger.cshtml
@@ -81,6 +81,8 @@ else
                         <option value="CashPaid" selected="@(ViewBag.SelectedVoucherType == "CashPaid")">Cash Paid</option>
                         <option value="CashReceived" selected="@(ViewBag.SelectedVoucherType == "CashReceived")">Cash Received</option>
                         <option value="CCR" selected="@(ViewBag.SelectedVoucherType == "CCR")">CCR</option>
+                        <option value="Expense" selected="@(ViewBag.SelectedVoucherType == "Expense")">Expense</option>
+                        <option value="Hazri" selected="@(ViewBag.SelectedVoucherType == "Hazri")">Hazri</option>
                     </select>
                 </div>
                 <div class="col-md-1">
